syntax = "proto3";

package myserver;

option go_package = "./proto;myserver";

service Myserver {
	rpc SayHello(SayRequest) returns (SayResponse) {}
	rpc Call(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message SayRequest {
	string message = 1;
}

message SayResponse {
	string answer = 1;
}

message Message {
	string say = 1;
}

message Request {
	string name = 1;
}

message Response {
	string msg = 1;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
